SV-4234 - Fix the buy button and the word-wraping

--- a/templates/_emotion/frontend/_resources/styles/emotion.css
+++ b/templates/_emotion/frontend/_resources/styles/emotion.css
@@ -2629,7 +2629,7 @@ div.step_box ul li.active .icon {background: url(../images/backgrounds/bg_stepnu
 div#notes .note {width: 799px;}
 div#notes .cat_text.full_length {width: 998px;}
 div#notes .note.full_length{width: 996px;}
-div#notes .article_price_unit {top: 110px;}
+div#notes .article_price_unit {top: 130px;}
 
 div#notes .table_row .action a {width: 148px;}
 div#notes .table_row .action a.basket {margin-bottom: 1px;}
